Checkstyle fix
Signed-off-by: vcardozo <victor.cardozo@artelys.com>